# author-comparer

./: LICENSE  README.md
backend/: Cargo.toml
backend/src/: main.rs
frontend/: biome.json  bun.lockb  index.html  package-lock.json  package.json  panda.config.ts  vite.config.ts
frontend/src/: index.tsx
frontend/src/components/: ResultViewer.tsx
