[package]
name = "author-comparer"
version = "1.0.0"
edition = "2021"

[dependencies]
actix-web = "4.4"
actix-cors = "0.6"
lindera-core = "0.24.0"
lindera-dictionary = "0.24.0"
lindera-tokenizer = { version = "0.24.0", features = ["ipadic"] }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
nalgebra = "0.33.2"
